syntax = "proto3";

package common;

// 공통 요청 메시지 구조
message C2S_MetaData {
  string userId = 1;         // 유저 ID (UUID, 16바이트)
  string clientVersion = 2;  // 클라이언트 버전 (문자열)
}

message C2S_Pos {
  C2S_MetaData meta = 1;         // 공통 메타 데이터(유저 ID, 버전, 호출 수)
  int32 y = 2;                         // y축 좌표
  int32 x = 3;                         // x축 좌표
}

